--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <h3 class="principal__subtitulo">Endereço</h3>
 
             <div class="formulario__campo">
-                <div id="error"></div>
                 <label class="campo__etiqueta" for="cep">CEP</label>
                 <input name="cep" id="cep" class="campo__escrita" required />
+                <div id="error" class="erro_cep"></div>
             </div>
 
             <div class="formulario__campo">
